--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000"
+    },
+    "dependencies": {
+        "vuetify": "^2.6.0"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
@@ -20,7 +23,9 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
+        "vue-cli-plugin-vuetify": "~2.4.7",
         "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "vuetify-loader": "^1.7.0"
     }
 }
